--- a/repo/depictions/com.cj81499.cjGlyphs/index.html
+++ b/repo/depictions/com.cj81499.cjGlyphs/index.html
@@ -1,84 +1,118 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="utf-8">
-  <title>cjGlyphs</title>
-  <base target="_top">
-  <link rel="stylesheet" type="text/css" href="/repo/css/style.css" />
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="format-detection" content="telephone=no">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>cjGlyphs</title>
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="/assets/css/styles.css">
+
+    <!-- Scripts -->
+    <script src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
+    <script src="/assets/js/navbars.js"></script>
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#3498db">
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="cj's Website">
+    <meta name="application-name" content="cj's Website">
+    <meta name="msapplication-TileColor" content="#3498db">
+    <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#3498db">
 </head>
 
-<body>
-  <div class="panel">
-    <div class="section-label">Info</div>
-    <div class="fieldset">
-      <div>
-        <p>This theme was made by and is being hosted by cj81499.</p>
-        <p>
-          <a href="https://www.reddit.com/r/iOSthemes/comments/2r45jz/custom_glyphsgotham_icons/">Reddit Post</a>
-        </p>
-        <p>
-          <a href="https://docs.google.com/document/d/1J-kl6YXp7kNIt1NaXjKfahUIaFV-T-N2SPfaSK5m4Ns/edit?pli=1"> Icon Requests</a>
-        </p>
-        <p>If you want to use the included icons for something, contact me and ask permission.</p>
-        <p>If you post a setup using this pack, I appreciate being credited. I'm
-          <a href="https://www.reddit.com/user/cj81499/">/u/cj81499</a> on Reddit and
-          <a href="https://twitter.com/cjMakesIcons/">@cjMakesIcons</a> on Twitter.</p>
-        <p>Alternate icons have "ALT" after the @2x. When I make another style for an icon, it either replaces the default or
-          becomes an ALT. I don't include new ALTs in the changelog. Remove the ALT after the @2x to use it instead of the
-          default.
-        </p>
-      </div>
-      <a class="black-text" href="./screenshots.html">
-        <img class="icon" src="/repo/assets/icons/screenshots.png" width="58" height="58">
-        <div>
-          <div>
-            <p>Screenshots</p>
-          </div>
+<body id="cjglyphs-page">
+    <section class="hero is-primary is-small">
+        <div class="hero-head">
+            <nav class="navbar">
+                <div class="container">
+                    <div class="navbar-brand">
+                        <a href="/" class="navbar-item">
+                            <img src="/assets/logo/cj.svg" width="28px" alt="Logo">
+                        </a>
+                        <span tabindex="0" class="navbar-burger" data-target="mainNav">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </span>
+                    </div>
+                    <div id="mainNav" class="navbar-menu">
+                        <div class="navbar-end">
+                            <a href="/" id="home" class="navbar-item">Home</a>
+<a href="/contact.html" id="contact" class="navbar-item">Contact</a>
+<div class="navbar-item has-dropdown is-hoverable">
+<a href="/repo/" id=repo class="navbar-link">Repo</a>
+<div class="navbar-dropdown">
+<a id="help" class="navbar-item" href="/repo/help.html">Help</a>
+<a id="cjglyphs" class="navbar-item" href="/repo/depictions/com.cj81499.cjGlyphs/">cjGlyphs</a>
+<a id="glyphs" class="navbar-item" href="/repo/depictions/com.tokems.Glyphs/">Glyphs</a>
+</div>
+</div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
         </div>
-      </a>
+        <div class="hero-body">
+            <div class="container ">
+                <h1 class="title ">cjGlyphs</h1>
+<p class="subtitle ">by cj81499</p>
+            </div>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container">
+            <div class="columns"><div class="column">
+    <div class="card">
+        <div class="card-header">
+            <div class="card-header-title">Info</div>
+        </div>
+        <div class="card-content"><p>This theme was made by and is being hosted by cj81499.</p>
+<p><a href="https://www.reddit.com/r/iOSthemes/comments/2r45jz/custom_glyphsgotham_icons/">Reddit Post</a></p>
+<p><a href="https://docs.google.com/document/d/1J-kl6YXp7kNIt1NaXjKfahUIaFV-T-N2SPfaSK5m4Ns/edit?pli=1"> Icon Requests</a></p>
+<p>If you want to redistribute the icons, get permision first.</p>
+<p>If you post a setup using this pack, please mention me in the post. I'm
+<a href="https://www.reddit.com/user/cj81499/">/u/cj81499</a> on Reddit and
+<a href="https://twitter.com/cjMakesIcons/">@cjMakesIcons</a> on Twitter.</p>
+<p>Alternate icons have "ALT" after the @2x. When I make another style for an icon, it either replaces the default or becomes an ALT. I don't include new ALTs in the changelog. Remove the ALT after the @2x to use it instead of the default.</p></div>
     </div>
-    <div class="section-label">Changelog</div>
-    <div class="fieldset">
-      <a class="black-text" href="./changelog.html">
-        <img class="icon" src="/repo/assets/icons/changelog.png" width="58" height="58">
-        <div>
-          <div>
-            <p>Changelog</p>
-          </div>
+</div>
+</div><div class="columns"><div class="column">
+    <div class="card">
+        <div class="card-header">
+            <div class="card-header-title">Screenshots</div>
         </div>
-      </a>
+        <div class="card-content"><div class="screenshot-container">
+    <div class="screenshots">
+        <a class="screenshot" href="./screenshots/1.png">
+    <img class="screenshot-img" src="./screenshots/1.png">
+</a>
+<a class="screenshot" href="./screenshots/2.png">
+    <img class="screenshot-img" src="./screenshots/2.png">
+</a>
+
     </div>
-    <div class="section-label">Other</div>
-    <div class="fieldset">
-      <a class="black-text" href="/repo/help.html">
-        <img class="icon" src="/repo/assets/icons/help.png" width="58" height="58">
-        <div>
-          <div>
-            <p>Help</p>
-          </div>
-        </div>
-      </a>
-      <a class="black-text" href="/repo/donate.html">
-        <img class="icon" src="/repo/assets/icons/donate.png" width="58" height="58">
-        <div>
-          <div>
-            <p>Donate</p>
-          </div>
-        </div>
-      </a>
-      <a class="black-text" href="/contact.html">
-        <img class="icon" src="/repo/assets/icons/contact.png" width="58" height="58">
-        <div>
-          <div>
-            <p>Contact Me</p>
-          </div>
-        </div>
-      </a>
+</div>
+</div>
     </div>
-  </div>
+</div>
+</div><div class="columns"><div class="column">
+    <div class="card">
+        <div class="card-header">
+            <div class="card-header-title">Changelog</div>
+        </div>
+        <div class="card-content"><p>Version 1.48 (4/15/2017)</p><p>It's been a while. I hope the larger than normal number of icons somewhat makes up for that.</p><p>Added Settings Theme! (Needs revision)</p><p>Added Coolors, Euchre 3D, Bitmoji, uMagic, Bloons TD (4, 5, and Battles), Gboard, 2048, Infinity Loop, Eluo, Speedtest.net, Narwhal, Vainglory, Tunnelbear</p><p>Updated Netflix</p><br><p>Version 1.47 (8/22/2016)</p><p>Dependency changes. Should default to Anemone instead of Winterboard now.</p><br><p>Version 1.46 (8/17/2016)</p><p>Added Cut the Rope, Piano Tiles, Photoshop Mobile, Psych, Quizlet, Quizup, Road Trip 2, Union</p><br><p>Version 1.45 (8/11/2016)</p><p>Added Paper by 53, Enlight, Pokemon GO, Snapseed</p><br><p>Version 1.44 (6/6/2016)</p><p>Added Reddit, Dexter, Dolphin, Teal, New Scientist</p><p>Updated Apple Watch</p><br><p>Version 1.43 (4/6/2016)</p><p>Added Game 4 2, Fussball.de, Kicktipp, Flashscore, Multi-Year Weight Training, Quizduell, Spiegel Online, Spox, ComdirectBanking</p><p>Updated Clash Royale, iCleaner Pro, Passbook/Wallet (I was wrong about being happy. I think I am now though.)</p><br><p>Version 1.42 (3/19/2016)</p><p>Added Desmos, Discord, Plague Inc, Clash Royale, Puzzle Forge II</p><p>Updated AfterLight, Spark</p><br><p>Version 1.41 (3/6/2016)</p><p>Added Tinder ;)</p><br><p>Version 1.40 (3/6/2016)</p><p>Added TestFlight</p><p>Updated Passbook/Wallet (I'm finally happy with its icon. This one is here to stay.)</p><p>Fixed Info.plist issues</p><br><p>Version 1.39 (2/24/2016)</p><p>Added BiteSMS, Boom Beach, Submarine</p><p>Updated Uber, Tips</p><br><p>Version 1.38 (1/31/2016)</p><p>Updated Clock</p><br><p>Version 1.37 (1/28/2016)</p><p>Added ESPN, Hulu, Bank Of America, Xbox SmartGlass, Minecraft PE, Quick Books, Zenonia S, Sword of Chaos</p><br><p>Version 1.36 (1/10/2016)</p><p>Added Calendars by Readdle, Rhapsody, Star Wars: Commander, Practice+, Twitterrific, Mathletics Student, Creepy PastaWiki, Puffin Browser, Agape</p><p>Updated Tweetbot</p><br><p>Version 1.35 (12/26/2015)</p><p>Added Black Option (I haven't tested this much. Please report any issues.)</p><p>Added 19 new icons: AntRec, Terminal, Appster, JW Library, CloudBeats, Chunky Comic Reader, PDF Expert 5, Bundlr, MovieBox, Alto's Adventure, Screenshot Maker Pro, Glit, CVS Pharmacy, USAA, Venmo, Citi, Line, Viber, Camfrog</p><br><p>Version 1.34 (12/19/2015)</p><p>Added OnePassword, Google Calendar, Spark Email, Comet, Yelp</p><br><p>Version 1.33 (12/12/2015)</p><p>Added AppDrawer, Outlook, OneDrive, OneNote, GarageBand, Keynote, Steam, Flow, Infuse, PicsPlay</p><br><p>Version 1.32 (11/17/2015)</p><p>WB Calendar Fix</p><br><p>Version 1.31 (11/14/2015)</p><p>Added Geekbench, XE Currency, Khan Academy</p><p>WB Clock Fix</p><br><p>Version 1.30 (11/13/2015)</p><p>Added Filza, iStudent App, Wikipedia</p><p>Depiction Changes</p><br><p>Version 1.29 (11/12/2015)</p><p>Updated OpenTable, News</p><p>Added Swagbucks, Skype, Apple Store</p><br><p>Version 1.28 (11/1/2015)</p><p>Size Optimizations</p><br><p>Version 1.27 (10/31/15)</p><p>Massive Size Reduction (Removed Image Metadata)</p><br><p>Version 1.26 (10/31/15)</p><p>Activator Fix (Anemone only because Winterboard can't theme Activator)</p><br><p>Version 1.25 (10/29/15)</p><p>New Depiction</p><br><p>Version 1.24 (10/17/15)</p><p>Add iOS 9 Icons (News, Passbook/Wallet, iCloud Drive)</p><br><p>Versions 1.0 - 1.23 (1/2/15 - 10/17/15)</p><p><a href="https: //docs.google.com/document/d/1a9sFh57R0qCcLWptkqTExtX5jUo5bKrnTuuIwjSAhdA">Older Changes</a></p></div>
+    </div>
+</div>
+</div>
+        </div>
+    </section>
 </body>
 
 </html>
