--- a/repo/depictions/com.tokems.Glyphs/index.html
+++ b/repo/depictions/com.tokems.Glyphs/index.html
@@ -1,77 +1,191 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="utf-8">
-  <title>Glyphs</title>
-  <base target="_top">
-  <link rel="stylesheet" type="text/css" href="/repo/css/style.css" />
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="format-detection" content="telephone=no">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Glyphs</title>
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="/assets/css/styles.css">
+
+    <!-- Scripts -->
+    <script src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
+    <script src="/assets/js/navbars.js"></script>
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#3498db">
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="cj's Website">
+    <meta name="application-name" content="cj's Website">
+    <meta name="msapplication-TileColor" content="#3498db">
+    <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#3498db">
 </head>
 
-<body>
-  <div class="panel">
-    <div class="section-label">Info</div>
-    <div class="fieldset">
-      <div>
-        <p>This theme was made by tokems (
-          <a href="http://tokemsaurus.tumblr.com/" target="_new">Blog</a> -
-          <a href="http://tokemsaurus.tumblr.com/info" target="_new">Other Places</a>) and is being hosted by cj81499 (
-          <a href="https://twitter.com/cjMakesIcons/" target="_new">Twitter</a>).</p>
-        <p>The icon theme was taken from tokems' website, the control center was taken from hoenir's repo, and the theme was
-          updated to work with iOS 8 by cj81499.</p>
-        <p>A wallpaper for iPhone 5 or iPhone 6 is available at "Library/Themes/Glyphs - iOS 8.theme/Wallpaper".</p>
-        <p>Contains a Polus compatible CC theme.</p>
-      </div>
-      <a class="black-text" href="./screenshots.html">
-        <img class="icon" src="/repo/assets/icons/screenshots.png" width="58" height="58">
-        <div>
-          <div>
-            <p>Screenshots</p>
-          </div>
+<body id="glyphs-page">
+    <section class="hero is-primary is-small">
+        <div class="hero-head">
+            <nav class="navbar">
+                <div class="container">
+                    <div class="navbar-brand">
+                        <a href="/" class="navbar-item">
+                            <img src="/assets/logo/cj.svg" width="28px" alt="Logo">
+                        </a>
+                        <span tabindex="0" class="navbar-burger" data-target="mainNav">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </span>
+                    </div>
+                    <div id="mainNav" class="navbar-menu">
+                        <div class="navbar-end">
+                            <a href="/" id="home" class="navbar-item">Home</a>
+<a href="/contact.html" id="contact" class="navbar-item">Contact</a>
+<div class="navbar-item has-dropdown is-hoverable">
+<a href="/repo/" id=repo class="navbar-link">Repo</a>
+<div class="navbar-dropdown">
+<a id="help" class="navbar-item" href="/repo/help.html">Help</a>
+<a id="cjglyphs" class="navbar-item" href="/repo/depictions/com.cj81499.cjGlyphs/">cjGlyphs</a>
+<a id="glyphs" class="navbar-item" href="/repo/depictions/com.tokems.Glyphs/">Glyphs</a>
+</div>
+</div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
         </div>
-      </a>
+        <div class="hero-body">
+            <div class="container ">
+                <h1 class="title ">Glyphs</h1>
+<p class="subtitle ">by Tokems</p>
+            </div>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container">
+            <div class="columns"><div class="column">
+    <div class="card">
+        <div class="card-header">
+            <div class="card-header-title">Info</div>
+        </div>
+        <div class="card-content"><p>This theme was made by tokems (<a href="http://tokemsaurus.tumblr.com/">Blog</a>) and is being hosted by cj81499 (<a href="/contact.html">Contact</a>).</p>
+<p>The icon theme is from tokems' website, the control center is from hoenir's repo, and the theme was updated to work with iOS 8+ by cj81499.</p>
+<p>A wallpaper for iPhone 5 or iPhone 6 is available at"Library/Themes/Glyphs - iOS 8.theme/Wallpaper".</p>
+<p>Contains a Polus compatible CC theme.</p></div>
     </div>
-    <div class="section-label">Changelog</div>
-    <div class="fieldset">
-      <a class="black-text" href="./changelog.html">
-        <img class="icon" src="/repo/assets/icons/changelog.png" width="58" height="58">
-        <div>
-          <div>
-            <p>Changelog</p>
-          </div>
+</div>
+</div><div class="columns"><div class="column">
+    <div class="card">
+        <div class="card-header">
+            <div class="card-header-title">Screenshots</div>
         </div>
-      </a>
+        <div class="card-content"><div class="screenshot-container">
+    <div class="screenshots">
+        <a class="screenshot" href="./screenshots/1.png">
+    <img class="screenshot-img" src="./screenshots/1.png">
+</a>
+
     </div>
-    <div class="section-label">Other</div>
-    <div class="fieldset">
-      <a class="black-text" href="/repo/help.html">
-        <img class="icon" src="/repo/assets/icons/help.png" width="58" height="58">
-        <div>
-          <div>
-            <p>Help</p>
-          </div>
-        </div>
-      </a>
-      <a class="black-text" href="/repo/donate.html">
-        <img class="icon" src="/repo/assets/icons/donate.png" width="58" height="58">
-        <div>
-          <div>
-            <p>Donate</p>
-          </div>
-        </div>
-      </a>
-      <a class="black-text" href="/contact.html">
-        <img class="icon" src="/repo/assets/icons/contact.png" width="58" height="58">
-        <div>
-          <div>
-            <p>Contact Me</p>
-          </div>
-        </div>
-      </a>
+</div>
+</div>
     </div>
-  </div>
+</div>
+</div><div class="columns"><div class="column">
+    <div class="card">
+        <div class="card-header">
+            <div class="card-header-title">Changelog</div>
+        </div>
+        <div class="card-content"><p>Version 1.27 (4/15/2017)</p>
+<p>Wallpaper</p>
+<br>
+<p>Version 1.26 (9/2/2016)</p>
+<p>Update Hide Icon Labels</p>
+<br>
+<p>Version 1.25 (8/22/2016)</p>
+<p>Dependency changes. Should default to Anemone instead of Winterboard now.</p>
+<br>
+<p>Version 1.24 (6/17/2016)</p>
+<p>Fix .DS_Store issue(?)</p>
+<br>
+<p>Version 1.23 (6/17/2016)</p>
+<p>Added Hide Icon Labels (Anemone Only)</p>
+<br>
+<p>Version 1.22 (3/17/2016)</p>
+<p>Updated iCleaner Pro</p>
+<br>
+<p>Version 1.21 (2/23/2016)</p>
+<p>Fixed some compatibility issues with older iOS versions</p>
+<br>
+<p>Version 1.20 (1/31/2016)</p>
+<p>Changed Clock</p>
+<br>
+<p>Version 1.19 (1/9/2016)</p>
+<p>Respring Logo is now it's own theme</p>
+<P>Size Optimizations (I forgot to optimize black version last time)</p>
+<br>
+<p>Version 1.18 (12/26/2015)</p>
+<p>Added Black Version (I haven't tested this much. Please report any issues.)</p>
+<br>
+<p>Version 1.17 (12/19/2015)</p>
+<p>Tweetbot 4 Icon</p>
+<br>
+<p>Version 1.16 (12/1/2015)</p>
+<p>Allow installation on any iOS version</p>
+<p>Please report bugs</p>
+<br>
+<p>Version 1.15 (11/17/2015)</p>
+<p>Winterboard Clock Fix</p>
+<br>
+<p>Version 1.14 (11/1/2015)</p>
+<p>Size Optimizations</p>
+<br>
+<p>Version 1.13 (10/31/15)</p>
+<p>Activator Fix (Anemone only. Winterboard can't theme Activator)</p>
+<br>
+<p>Version 1.12 (10/29/15)</p>
+<p>I'm not quite sure, but I know I changed something.</p>
+<br>
+<p>Version 1.11 (10/27/15)</p>
+<p>New Depiction</p>
+<p>Added Polus CC Theme</p>
+<br>
+<p>Version 1.10 (10/6/15)</p>
+<p>Fix Respring Logo for White Devices</p>
+<br>
+<p>Version 1.9 (9/28/15)</p>
+<p>Deb "Depends" line changes</p>
+<p>Depiction update</p>
+<br>
+<p>Version 1.8 (9/25/15)</p>
+<p>Winterboard Clock fixes (Requires Custom Clock Icon)</p>
+<br>
+<p>Version 1.7 (9/23/15)</p>
+<p>I Forgot to Make a Changlog</p>
+<p>Probably Mostly Icon Fixes</p>
+<p>*Shrugs*</p>
+<p>Winterboard Support</p>
+<br>
+<p>Version 1.3 (8/22/15)</p>
+<p>Icon and Badge Fixes</p>
+<br>
+<p>Version 1.2 (8/21/15)</p>
+<p>Added Control Center Theme</p>
+<br>
+<p>Version 1.1 (8/20/15)</p>
+<p>Icon Fixes</p>
+<br>
+<p>Version 1.0 (8/19/15)</p>
+<p>Initial Release</p></div>
+    </div>
+</div>
+</div>
+        </div>
+    </section>
 </body>
 
 </html>
