--- a/repo/index.html
+++ b/repo/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>cj Repo</title>
-    <base target="_top">
+    <title>Repo</title>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" type="text/css" href="/repo/css/style.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
+
+    <!-- Scripts -->
+    <script src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
+    <script src="/assets/js/navbars.js"></script>
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
@@ -24,42 +27,58 @@
     <meta name="theme-color" content="#3498db">
 </head>
 
-<body>
-    <div class="panel">
-        <div id="block-title">
-            <p>Welcome to cj81499's Cydia Repo!</p>
-        </div>
-        <div class="section-label">Do Things</div>
-        <div class="fieldset">
-            <a class="black-text" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://cj81499.github.io/repo/">
-                <img class="icon" src="/repo/assets/icons/cydia.png">
-                <div>
-                    <div>
-                        <p>Add to Cydia</p>
+<body id="repo-page">
+    <section class="hero is-primary is-small">
+        <div class="hero-head">
+            <nav class="navbar">
+                <div class="container">
+                    <div class="navbar-brand">
+                        <a href="/" class="navbar-item">
+                            <img src="/assets/logo/cj.svg" width="28px" alt="Logo">
+                        </a>
+                        <span tabindex="0" class="navbar-burger" data-target="mainNav">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </span>
+                    </div>
+                    <div id="mainNav" class="navbar-menu">
+                        <div class="navbar-end">
+                            <a href="/" id="home" class="navbar-item">Home</a>
+<a href="/contact.html" id="contact" class="navbar-item">Contact</a>
+<div class="navbar-item has-dropdown is-hoverable">
+<a href="/repo/" id=repo class="navbar-link">Repo</a>
+<div class="navbar-dropdown">
+<a id="help" class="navbar-item" href="/repo/help.html">Help</a>
+<a id="cjglyphs" class="navbar-item" href="/repo/depictions/com.cj81499.cjGlyphs/">cjGlyphs</a>
+<a id="glyphs" class="navbar-item" href="/repo/depictions/com.tokems.Glyphs/">Glyphs</a>
+</div>
+</div>
+                        </div>
                     </div>
                 </div>
-            </a>
-            <a class="black-text">
-                <img class="icon" src="/repo/assets/icons/url.png">
-                <div>
-                    <div id="repo-url">
-                        <p>URL</p>
-                        <input type="text" value="https://cj81499.github.io/repo/" onclick="this.setSelectionRange(0, this.value.length);" readonly>
-                    </div>
-                </div>
-            </a>
+            </nav>
         </div>
-        <div class="section-label">Thanks</div>
-        <div class="fieldset">
-            <div>
-                <div>
-                    <p>
-                        <a href="https://elijahandandrew.com/" target="_new">Elijah and Andrew</a> were nice enough to let me base the way my repo looks off of theirs. Their
-                        repo is dead now, but thanks anyways!</p>
-                </div>
+        <div class="hero-body">
+            <div class="container ">
+                <h1 class="title ">cjRepo</h1>
+<p class="subtitle ">You made it!</p>
             </div>
         </div>
+    </section>
+    <section class="section">
+        <div class="container">
+            <div class="columns"><div class="column">
+    <div class="card">
+        <div class="card-header">
+            <div class="card-header-title"><span><i class="fas fa-cube" data-fa-transform="shrink-5" data-fa-mask="fas fa-circle"></i> Add to Cydia</span></div>
+        </div>
+        <div class="card-content"><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://cj81499.github.io/repo/">Click Me!</a></div>
     </div>
+</div>
+</div>
+        </div>
+    </section>
 </body>
 
 </html>
