--- a/repo/depictions/com.cj81499.cjGlyphs/index.html
+++ b/repo/depictions/com.cj81499.cjGlyphs/index.html
@@ -80,7 +80,8 @@
 <p>If you post a setup using this pack, please mention me in the post. I'm
 <a href="https://www.reddit.com/user/cj81499/">/u/cj81499</a> on Reddit and
 <a href="https://twitter.com/cjMakesIcons/">@cjMakesIcons</a> on Twitter.</p>
-<p>Alternate icons have "ALT" after the @2x. When I make another style for an icon, it either replaces the default or becomes an ALT. I don't include new ALTs in the changelog. Remove the ALT after the @2x to use it instead of the default.</p></div>
+<p>Alternate icons have "ALT" after the @2x. When I make another style for an icon, it either replaces the default or becomes an ALT. I don't include new ALTs in the changelog. Remove the ALT after the @2x to use it instead of the default.</p>
+<p>Enable BOTH cjGlyphs and Glyphs with cjGlyphs above Glyphs.</p></div>
     </div>
 </div>
 </div><div class="columns"><div class="column">
