remove targeting new tab (didn't work anyways I think)
Update screenshots

--- a/repo/depictions/com.cj81499.BarelyRounded/index.html
+++ b/repo/depictions/com.cj81499.BarelyRounded/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>BarelyRounded</title>
-  <base target="_top">
+
   <link rel="stylesheet" type="text/css" href="/repo/css/style.css" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
@@ -16,7 +16,7 @@
     <div class="fieldset">
       <div>
         <p>Icon mask and shadow requested on reddit
-          <a href="https://www.reddit.com/r/iOSthemes/comments/3nrehu/question_can_somebody_make_this_android_type_icon/" target="new">here</a>.</p>
+          <a href="https://www.reddit.com/r/iOSthemes/comments/3nrehu/question_can_somebody_make_this_android_type_icon/">here</a>.</p>
       </div>
       <a class="black-text" href="./screenshots.html">
         <img class="icon" src="/repo/assets/icons/screenshots.png" width="58" height="58">
