--- a/repo/depictions/com.cj81499.cjGlyphs/index.html
+++ b/repo/depictions/com.cj81499.cjGlyphs/index.html
@@ -91,12 +91,23 @@
         </div>
         <div class="card-content"><div class="screenshot-container">
     <div class="screenshots">
-        <a class="screenshot" href="./screenshots/1.png">
-    <img class="screenshot-img" src="./screenshots/1.png">
-</a>
-<a class="screenshot" href="./screenshots/2.png">
-    <img class="screenshot-img" src="./screenshots/2.png">
-</a>
+        <div class="screenshot">
+    <a class="screenshot-img-link" href="./screenshots/1.png">
+        <img class="screenshot-img" src="./screenshots/1.png">
+    </a>
+    <div class="screenshot-label">
+        <p>Personal Setup</p>
+<a href="/contact.html">cj81499</a>
+    </div>
+</div>
+<div class="screenshot">
+    <a class="screenshot-img-link" href="./screenshots/2.png">
+        <img class="screenshot-img" src="./screenshots/2.png">
+    </a>
+    <div class="screenshot-label">
+        <a href="https://www.reddit.com/r/iOSthemes/comments/3yoc5m/setup_visionary_nsfw/">Visionary Setup [NSFW]</a><a href="https://www.reddit.com/user/TruthandLogic">TruthandLogic</a>
+    </div>
+</div>
 
     </div>
 </div>
