--- a/repo/depictions/com.tokems.Glyphs/index.html
+++ b/repo/depictions/com.tokems.Glyphs/index.html
@@ -86,9 +86,14 @@
         </div>
         <div class="card-content"><div class="screenshot-container">
     <div class="screenshots">
-        <a class="screenshot" href="./screenshots/1.png">
-    <img class="screenshot-img" src="./screenshots/1.png">
-</a>
+        <div class="screenshot">
+    <a class="screenshot-img-link" href="./screenshots/1.png">
+        <img class="screenshot-img" src="./screenshots/1.png">
+    </a>
+    <div class="screenshot-label">
+        <p>Personal Setup</p><a href="/contact.html">cj81499</a>
+    </div>
+</div>
 
     </div>
 </div>
