--- a/repo/depictions/com.cj81499.PebbleStatus.OG/index.html
+++ b/repo/depictions/com.cj81499.PebbleStatus.OG/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>PebbleStatus OG</title>
-  <base target="_top">
+
   <link rel="stylesheet" type="text/css" href="/repo/css/style.css" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
@@ -16,10 +16,10 @@
     <div class="fieldset">
       <div>
         <p>This theme was made by and is being hosted by cj81499 (
-          <a href="https://twitter.com/cjMakesIcons/" target="_new">Twitter</a>).</p>
+          <a href="https://twitter.com/cjMakesIcons/">Twitter</a>).</p>
         <p>Only works with @2x devices</p>
         <p>Also check out
-          <a href="cydia://package/com.cj81499.PebbleStatus.Time" target="_new">Pebble Time PebbleStatus Theme</a>.</p>
+          <a href="cydia://package/com.cj81499.PebbleStatus.Time">Pebble Time PebbleStatus Theme</a>.</p>
       </div>
       <a class="black-text" href="./screenshots.html">
         <img class="icon" src="/repo/assets/icons/screenshots.png" width="58" height="58">
