--- a/repo/depictions/com.highdetalio.SpaceBlueBerry/index.html
+++ b/repo/depictions/com.highdetalio.SpaceBlueBerry/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>SpaceBlueBerry</title>
-  <base target="_top">
+
   <link rel="stylesheet" type="text/css" href="/repo/css/style.css" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
@@ -16,10 +16,10 @@
     <div class="fieldset">
       <div>
         <p>This theme was made by highdetalio (
-          <a href="https://twitter.com/highdetalio" target="_new">Twitter</a>). It was updated for iOS 8 and is being hosted by cj81499 (
-          <a href="https://twitter.com/cjMakesIcons/" target="_new">Twitter</a>).</p>
+          <a href="https://twitter.com/highdetalio">Twitter</a>). It was updated for iOS 8 and is being hosted by cj81499 (
+          <a href="https://twitter.com/cjMakesIcons/">Twitter</a>).</p>
         <p>How to use with
-          <a href="https://docs.google.com/document/d/16d1QZ9w4QeM28eYdrijGTWQkWJyUxUOMmxV4cHU25K8/edit?usp=sharing" target="_new">Anemone or Winterboard</a>
+          <a href="https://docs.google.com/document/d/16d1QZ9w4QeM28eYdrijGTWQkWJyUxUOMmxV4cHU25K8/edit?usp=sharing">Anemone or Winterboard</a>
         </p>
         <p>Alternate icons are located at /Library/Themes/SpaceBlueBerry - iOS 8.theme/ALTs</p>
       </div>
