--- a/repo/depictions/com.jacopoiuytr.Mandolino/index.html
+++ b/repo/depictions/com.jacopoiuytr.Mandolino/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Mandolino</title>
-  <base target="_top">
+
   <link rel="stylesheet" type="text/css" href="/repo/css/style.css" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
@@ -16,12 +16,12 @@
     <div class="fieldset">
       <div>
         <p>This theme was made by jacopoiuytr (
-          <a href="https://twitter.com/jacopoiuytr" target="_new">Twitter</a> -
-          <a href="https://www.reddit.com/user/jacopoiuytr" target="_new">Reddit</a>) and is being hosted by cj81499 (
-          <a href="https://twitter.com/cjMakesIcons/" target="_new">Twitter</a>).</p>
+          <a href="https://twitter.com/jacopoiuytr">Twitter</a> -
+          <a href="https://www.reddit.com/user/jacopoiuytr">Reddit</a>) and is being hosted by cj81499 (
+          <a href="https://twitter.com/cjMakesIcons/">Twitter</a>).</p>
         <p>The icon theme was taken from jacopoiuytr and was updated to work with iOS 8 by cj81499.</p>
         <p>How to use with
-          <a href="https://docs.google.com/document/d/16d1QZ9w4QeM28eYdrijGTWQkWJyUxUOMmxV4cHU25K8/edit?usp=sharing" target="_new">Anemone or Winterboard</a>
+          <a href="https://docs.google.com/document/d/16d1QZ9w4QeM28eYdrijGTWQkWJyUxUOMmxV4cHU25K8/edit?usp=sharing">Anemone or Winterboard</a>
         </p>
       </div>
       <a class="black-text" href="./screenshots.html">
