--- a/repo/depictions/com.jacopoiuytr.Mandolino/screenshots.html
+++ b/repo/depictions/com.jacopoiuytr.Mandolino/screenshots.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Screenshots</title>
-  <base target="_top">
+
   <link rel="stylesheet" type="text/css" href="/repo/css/style.css" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
@@ -18,8 +18,8 @@
         <center>
           <img src="./screenshots/1.png" width="100%">
           <p style="font-family: HelveticaNeue">Screenshot from
-            <a href="https://www.reddit.com/r/iOSthemes/comments/3o4ww7/setup_mandolino_ocean/cvud2w7" target="_new">here</a>. Setup by
-            <a href="https://www.reddit.com/user/ReadyBasher01" target="_new">/u/ReadyBasher01</a>.</p>
+            <a href="https://www.reddit.com/r/iOSthemes/comments/3o4ww7/setup_mandolino_ocean/cvud2w7">here</a>. Setup by
+            <a href="https://www.reddit.com/user/ReadyBasher01">/u/ReadyBasher01</a>.</p>
           <br>
           <br>
           <img src="./screenshots/2.png" width="100%">
