fix home page on nav not highlighting

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>cj</title>
+    <title>Home</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/assets/css/styles.css">
@@ -27,7 +27,7 @@
     <meta name="theme-color" content="#3498db">
 </head>
 
-<body id="cj-page">
+<body id="home-page">
     <section class="hero is-primary is-small">
         <div class="hero-head">
             <nav class="navbar">
