animate dropdown menus and improve json format

--- a/repo/depictions/com.cj81499.cjGlyphs/index.html
+++ b/repo/depictions/com.cj81499.cjGlyphs/index.html
@@ -8,6 +8,7 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/animate.css">
 
     <!-- Scripts -->
     <script src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
@@ -45,15 +46,15 @@
                     <div id="mainNav" class="navbar-menu">
                         <div class="navbar-end">
                             <a href="/" id="home" class="navbar-item">Home</a>
-<a href="/contact.html" id="contact" class="navbar-item">Contact</a>
-<div class="navbar-item has-dropdown is-hoverable">
-<a href="/repo/" id=repo class="navbar-link">Repo</a>
-<div class="navbar-dropdown">
-<a id="help" class="navbar-item" href="/repo/help.html">Help</a>
-<a id="cjglyphs" class="navbar-item" href="/repo/depictions/com.cj81499.cjGlyphs/">cjGlyphs</a>
-<a id="glyphs" class="navbar-item" href="/repo/depictions/com.tokems.Glyphs/">Glyphs</a>
-</div>
-</div>
+                            <a href="/contact.html" id="contact" class="navbar-item">Contact</a>
+                            <div class="navbar-item has-dropdown is-hoverable">
+                                <a href="/repo/" id=repo class="navbar-link">Repo</a>
+                                <div class="navbar-dropdown cjInSlide">
+                                    <a id="help" class="navbar-item" href="/repo/help.html">Help</a>
+                                    <a id="cjglyphs" class="navbar-item" href="/repo/depictions/com.cj81499.cjGlyphs/">cjGlyphs</a>
+                                    <a id="glyphs" class="navbar-item" href="/repo/depictions/com.tokems.Glyphs/">Glyphs</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -97,7 +98,8 @@
     </a>
     <div class="screenshot-label">
         <p>Personal Setup</p>
-<a href="/contact.html">cj81499</a>
+<p><a href="/contact">cj81499</a></p>
+
     </div>
 </div>
 <div class="screenshot">
@@ -105,7 +107,9 @@
         <img class="screenshot-img" src="./screenshots/2.png">
     </a>
     <div class="screenshot-label">
-        <a href="https://www.reddit.com/r/iOSthemes/comments/3yoc5m/setup_visionary_nsfw/">Visionary Setup [NSFW]</a><a href="https://www.reddit.com/user/TruthandLogic">TruthandLogic</a>
+        <p><a href="https://www.reddit.com/r/iOSthemes/comments/3yoc5m/setup_visionary_nsfw/">Visionary Setup [NSFW]</a></p>
+<p><a href="https://www.reddit.com/user/TruthandLogic">TruthandLogic</a></p>
+
     </div>
 </div>
 
