--- a/repo/help.html
+++ b/repo/help.html
@@ -8,7 +8,7 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="stylesheet" href="/assets/css/animate.css">
+    <!-- <link rel="stylesheet" href="/assets/css/animate.css"> -->
 
     <!-- Scripts -->
     <script src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
